# dagger

./: .gitignore  LICENSE  README.md  dagger.cabal  default.nix  shell.nix  stack.yaml
app/: JS.hs  Main.hs
nix/: overlay.nix
src/Dagger/: Handler.hs  JS.hs  Main.hs  Types.hs  View.hs
static/: index.html  style.css
